# Change Log
# All notable changes to this project will be documented in this file.
# This project adheres to [Semantic Versioning](http://semver.org/).
# includes Added / Changed / Fixed

## [3.2.0] UNRELEASED
### Added
- The concept of `manager` is introduced
- New elegant model API methods [PR#122](https://github.com/bali-framework/bali/pull/122)
- Added `db.Base` declarative_base

### Changed
- Removed deprecated retry_on_deadlock_decorator

## [3.1.0 ~ 3.1.6] 2020-04-30 ~ 2020-05-23
### Added
- `Event` supported
- RabbitMQ fanout exchange support
### Fixed
- Compatible legacy SQLA-Wrapper SessionProxy

## [3.0.0] 2022-04-24
### Added
- Upgraded to sql-wrapper v5.0.0
- Supported uvicorn 0.15
- Model support asynchronous
- Resource support asynchronous
### Changed
- Removed main.py default launch behavior

## [2.1.3] 2021-11-19
### Added
- timezone added `localtime`/`localdate`

## [2.1.0] 2021-10-14
### Changed
- Adjusted version range dependency packages

## [2.0.0] 2021-05-26
### Added
- Resource layer base class, support elegant RESTful CRUD
- Refactor core layer, support multi dotenv variables
- Handle metadata or context

## [1.2.1] 2021-03-22
### Changed
- Added custom route class support clear SQLAlchemy scoped session

## [1.2.0] 2021-03-21
### Changed
- Added custom APIRouter support clear SQLAlchemy scoped session

## [1.1.2] 2021-03-20
### Fixed
- Fixed close and remove session when FastAPI request completed
### Changed
- Added SQLAlchemy pool_recycle setting, default value is 2 hours

## [1.1.0] 2021-03-03
### Added
- Added timezone settings and utility
- RPC logging when defined log handler
- New model method bind to BaseModel: count() and get_fields()

## [1.0.3] 2021-02-20
### Fixed
- locked uvicorn version (0.12.3) to fixed runtime error

## [1.0.0] 2021-01-26
### Added
- Added db stub file to improve code intelligence
- Ensure db remove even though exception raised
### Fixed
- gRPC base tests lost `ProcessInterceptor`

## [0.7.3] 2021-01-14